tests/ui/for-loop-while/for-loop-unconstrained-element-type.stderr
error[E0282]: type annotations needed
  --> $DIR/for-loop-unconstrained-element-type.rs:9:14
   |
LL |     for i in Vec::new() {}
   |              ^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Vec`
   |
help: consider specifying a concrete type for the generic type `T`
   |
LL |     for i in Vec::<SomeConcreteType>::new() {}
   |                 ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
